2005-12-26  Gert Driesen <drieseng@users.sourceforge.net>

	* XmlNamespaceManagerTests.cs: Added tests for xml prefix.

2005-12-23  Atsushi Enomoto <atsushi@ximian.com>

	* XmlTextWriterTests.cs : XmlSpace_Valid() is working now.

2005-12-23  Atsushi Enomoto <atsushi@ximian.com>

	* XmlTextWriterTests.cs : XmlNs_Valid2() is working now.

2005-12-23  Gert Driesen <drieseng@users.sourceforge.net>

	* XmlTextWriterTests.cs: Fixed line endings. Enabled XmlPrefix_ValidMS
	test. Added bug numbers to test cases.

2005-12-23  Gert Driesen <drieseng@users.sourceforge.net>

	* XmlTextWriterTests.cs: Improved coverage of xml prefix tests.

2005-12-16  Gert Driesen <drieseng@users.sourceforge.net>

	* XmlTextWriterTests.cs: Fixed some tests that caught exception to
	become useful. Added few tests that fail on Mono.

2005-12-16  Gert Driesen <drieseng@users.sourceforge.net>

	* XmlTextWriterTests.cs: No longer derive from deprecated Assertion
	class. Added WriteDocType tests.
	* XmlWriterTests.cs: No longer derive from deprecated Assertion class.

2005-12-15  Konstantin Triger <kostat@mainsoft.com>

	* XmlTextWriterTests.cs: added WriteCDataNull test.

2005-12-14  Atsushi Enomoto <atsushi@ximian.com>

	* XmlDocumentTests.cs : (CreateNodeNodeTypeName) the previous fix was 
	  wrong; ArgumentException is the expected exception (it anyways won't
	  work under MS.NET 2.0).
	* XmlNodeTests.cs : added labels to assertions. another NotDotNet case.
	* XmlAttributeTests.cs : ditto.

2005-12-14  Atsushi Enomoto <atsushi@ximian.com>

	* XmlDocumentTests.cs, XmlAttributeCollectionTests.cs
	  XmlElementTests.cs, XmlCharacterDataTests.cs :
	  Marked NotDotNet for some tests broken under 2.0 (MS bugs).
	  Marked Ignore for some tests which originally does not make sense.
	  Changed types in ExpectedException for some tests under 2.0.

2005-12-12  Atsushi Enomoto <atsushi@ximian.com>

	* XmlAssert.cs : new file.

2005-12-12  Atsushi Enomoto <atsushi@ximian.com>
